<resources>
    <string name="app_name">T.U.S.</string>
    <string name="action_guide">Помощь</string>
    <string name="terms_label">Согласие на ОПД</string>
    <string name="pages_label">Страницы</string>
    <string name="second_fragment_label">Наслаждайся командной деятельностью :3</string>
    <string name="accept">Принять</string>
    <string name="skip">Пропуск</string>
    <string name="to_login">Вход</string>
    <string name="to_registration">Регистрация</string>
    <string name="enter_telegram">Введите ник-нейм в Telegram:</string>
    <string name="enter_name">Введите ваше имя:</string>
    <string name="enter_nick">Ввидите ваш псевдоним:</string>
    <string name="enter_passwd">Введите пароль:</string>
    <string name="confirm_passwd">Подтвердите пароль:</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="chose_icon">Выберете аватар</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="ok">ОК</string>
    <string name="view_more">Раскрыть</string>
    <string name="view_less">Скрыть</string>
    <string name="reg_email">Адрес электронной почты:</string>
    <string name="reg_pass">Пароль:</string>
    <string name="page_1">Страница 1</string>
    <string name="page_2">Страница 2</string>
    <string name="page_3">Страница 3</string>
    <string name="page_4">Страница 4</string>
    <string name="page_5">Страница 5</string>
    <string name="previous">Назад</string>
    <string name="extend_description">Подробнее</string>
    <string name="tags_choosing_logo">Выберете теги</string>
    <string name="tags_choosing_description">Для того, чтобы алгоритмы программы могли предлагать Вам наиболее интересные и полезные вам проекты, выберите из списка тегов те навыки, которыми Вы обладаете.</string>
    <string name="tags_choosing_description_more">Для того, чтобы алгоритмы программы могли предлагать Вам наиболее интересные и полезные вам проекты, выберите из списка тегов те навыки, которыми Вы обладаете. \n\nЕсли вы настройте соответствующий параметр в настройках, то другим пользователям также будет доступен к просмотру список ваших навыков (так администраторы проектов смогут определить, на сколько Вы подходите им в качестве участника проектной команды).</string>
    <string name="tag_math_1">Т. вероятности</string>
    <string name="tag_math_2">Тригонометрия</string>
    <string name="tag_math_3">Стереометрия</string>
    <string name="tag_math_4">Планеметрия</string>
    <string name="tag_math_5">Топология</string>
    <string name="tag_math_6">Т. графов</string>
    <string name="tag_physics_1">Астрология</string>
    <string name="tag_physics_2">Квантовая ф.</string>
    <string name="tag_physics_3">Т. относительности</string>
    <string name="tag_physics_4">Инженерия</string>
    <string name="tag_physics_5">Кинематика</string>
    <string name="tag_physics_6">Термодинамика</string>
    <string name="tag_physics_7">Электродинамика</string>
    <string name="tag_physics_8">Электростатика</string>
    <string name="tag_info_1">Android</string>
    <string name="tag_info_2">IOS</string>
    <string name="tag_info_3">Desktop</string>
    <string name="tag_info_4">Web</string>
    <string name="tag_info_5">Linux</string>
    <string name="tag_info_6">UI</string>
    <string name="tag_info_7">Инженерия</string>
    <string name="tag_info_8">UX</string>
    <string name="tag_info_9">Design</string>
    <string name="tag_info_10">AI</string>
    <string name="tag_info_11">Data Sc.</string>
    <string name="tag_info_12">VR</string>
    <string name="tag_info_13">Game dev.</string>
    <string name="tag_info_14">Wear OS</string>
    <string name="tag_is_1">Криптография</string>
    <string name="tag_is_2">Пентест</string>
    <string name="tag_is_3">Reverse</string>
    <string name="tag_is_4">Steganography</string>
    <string name="tag_is_5">Exploit</string>
    <string name="tag_is_6">Web</string>
    <string name="tag_is_7">Forensic</string>
    <string name="tag_is_8">PPC</string>
    <string name="tag_is_9">Misc</string>
    <string name="tag_is_10">Security</string>
    <string name="tag_lang_1">Португальский я.</string>
    <string name="tag_lang_2">Русский я.</string>
    <string name="tag_lang_3">Английский я.</string>
    <string name="tag_lang_4">Испанский я.</string>
    <string name="tag_lang_5">Французский я.</string>
    <string name="tag_lang_6">Китайский я.</string>
    <string name="tag_lang_7">Японский я.</string>
    <string name="tag_lang_8">Немецкий я.</string>
    <string name="tag_lang_9">Турецкий я.</string>
    <string name="tag_lang_10">Финский я.</string>
    <string name="tag_medicine_1">Хирургия</string>
    <string name="tag_medicine_2">Офтольмология</string>
    <string name="tag_medicine_3">Стоматология</string>
    <string name="tag_medicine_4">ЛОР</string>
    <string name="tag_medicine_5">Подология</string>
    <string name="tag_medicine_6">Неврология</string>
    <string name="tag_medicine_7">Кардиология</string>
    <string name="tag_medicine_8">Аллергология</string>
    <string name="tag_economy_1">Бухгалтерия</string>
    <string name="tag_economy_2">Маркетинг</string>
    <string name="tag_economy_3">Юреспруденция</string>
    <string name="tag_economy_4">Бизнес</string>
    <string name="tag_other_1">География</string>
    <string name="tag_other_2">Энергетика</string>
    <string name="tag_other_3">Сейсмология</string>
    <string name="tag_other_4">Дизайн</string>
    <string name="tag_other_5">Химия</string>
    <string name="tag_other_6">Литература</string>
    <string name="tag_other_7">Ветеринария</string>
    <string name="tag_other_8">Биология</string>
    <string name="tag_global_1">Моделирование</string>
    <string name="tag_global_2">Исследование</string>
    <string name="tag_global_3">Автоматизация</string>
    <string name="tag_global_4">Общее</string>
    <string name="tag_global_5">Наставничество</string>
    <string name="tag_global_6">Анализ</string>
    <string name="tag_global_7">Оптимизация</string>
    <string name="tag_global_8">Другое</string>
    <string name="terms_less">Нажимая на кнопку \"Принять\", Вы соглашаетесь с условиями использования приложения.</string>
    <string name="terms_more">Политика конфиденциальности - это заявление или юридический документ (в законе о конфиденциальности), который раскрывает некоторые или все способы, которыми сторона собирает, использует, раскрывает и управляет клиентом или данными клиента. Личная информация может быть любой, которая может быть использована для идентификации физического лица, не ограничиваясь именем, адресом, датой рождения, семейным положением, контактной информацией, удостоверением личности и датой истечения срока действия, финансовыми записями, кредитной информацией, историей болезни, местом путешествия и намерения приобрести товары и услуги.[2] В случае бизнеса, часто это заявление, в котором декларируется политика стороны в отношении того, как она собирает, хранит и разглашает личную информацию, которую она собирает. Он информирует клиента о том, какая конкретная информация собирается, и сохраняется ли она конфиденциальной, передается ли партнерам или продается другим фирмам или предприятиям.[3] [4] Политика конфиденциальности обычно представляет собой более широкий, обобщенный подход, в отличие от заявлений об использовании данных, которые, как правило, более подробные и специфический.\n\nТочное содержание определенной политики конфиденциальности будет зависеть от применимого законодательства и, возможно, потребуется учитывать требования, действующие в разных географических границах и правовых юрисдикциях. Большинство стран имеют собственное законодательство и руководящие принципы в отношении того, на кого распространяется действие, какую информацию можно собирать и для чего ее можно использовать. В целом, законы о защите данных в Европе распространяются как на частный, так и на государственный сектор. Их законы о неприкосновенности частной жизни применяются не только к государственным операциям, но и к частным предприятиям и коммерческим сделкам.\n\nКалифорнийский кодекс бизнеса и профессий, Требования к конфиденциальности в Интернете (CalOPPA) предписывают, что веб-сайты, собирающие личную информацию (PII) от жителей Калифорнии, должны публиковать свою политику конфиденциальности на видном месте. (См. также Закон о защите конфиденциальности в Интернете)    </string>
    <string name="test_part_1">
        Rap God\n
        [Intro]\n
        "Look, I was gonna go easy on you not to hurt your feelings."\n
        "But I\'m only going to get this one chance."\n
        "Something\'s wrong, I can feel it."\n
        Six minutes. Six minutes. Six minutes, Slim Shady, you\'re on!\n
        "Just a feeling I\'ve got. Like something\'s about to happen, but I don\'t know what. If that means what I think it means, we\'re in trouble, big trouble; and if he is as bananas as you say, I\'m not taking any chances."\n
        "You are just what the doc ordered."\n
         \n
        [Chorus]\n
        I\'m beginnin\' to feel like a Rap God, Rap God\n
        All my people from the front to the back nod, back nod\n
        Now, who thinks their arms are long enough to slap box, slap box?\n
        They said I rap like a robot, so call me Rap-bot\n
         \n
    </string>
    <string name="test_part_2">
        [Verse 1]\n
        But for me to rap like a computer it must be in my genes\n
        I got a laptop in my back pocket\n
        My pen\'ll go off when I half-cock it\n
        Got a fat knot from that rap profit\n
        Made a livin\' and a killin\' off it\n
        Ever since Bill Clinton was still in office\n
        With Monica Lewinsky feelin\' on his nutsack\n
        I\'m an MC still as honest\n
        But as rude and as indecent as all hell\n
        Syllables, skill-a-holic (Kill \'em all with)\n
        This flippity dippity-hippity hip-hop\n
        You don\'t really wanna get into a pissin\' match\n
        With this rappity brat, packin\' a MAC in the back of the Ac\'\n
        Backpack rap crap, yap-yap, yackety-yack\n
        And at the exact same time, I attempt these lyrical acrobat stunts while I\'m practicin\' that\n
        I\'ll still be able to break a motherfuckin\' table\n
        Over the back of a couple of faggots and crack it in half\n
        Only realized it was ironic, I was signed to Aftermath after the fact\n
        How could I not blow? All I do is drop F-bombs\n
        Feel my wrath of attack\n
        Rappers are havin\' a rough time period, here\'s a maxi pad\n
        It\'s actually disastrously bad for the wack\n
        While I\'m masterfully constructing this masterpiece as\n
         \n
        [Chorus]\n
        \'Cause I\'m beginnin\' to feel like a Rap God, Rap God\n
        All my people from the front to the back nod, back nod\n
        Now, who thinks their arms are long enough to slap box, slap box?\n
        Let me show you maintainin\' this shit ain\'t that hard, that hard\n
         \n
    </string>
</resources>