<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/page_1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/page_2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/page_3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/page_4"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/page_5"/>
</menu>