<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entering.TermsFragment">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/design_default_color_secondary_variant"
                android:id="@+id/terms_label"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/terms_label"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/terms_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/terms_less"
                android:textSize="16sp" />



            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:text="@string/view_more"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />


                <Button
                    android:id="@+id/button_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/design_default_color_secondary"
                    android:text="@string/accept"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

            </LinearLayout>

        </LinearLayout>



</androidx.core.widget.NestedScrollView>