<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entering.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:id="@+id/registration_label"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="35sp" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/name_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/enter_name"
                android:textSize="16sp" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/nick_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/enter_nick"
                android:textSize="16sp" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/editTextNick"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/email_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/enter_email"
                android:textSize="16sp" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/password_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/enter_passwd"
                android:textSize="16sp" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/editTextTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="textPassword" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/confirm_password_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/confirm_passwd"
                android:textSize="16sp" />

            <EditText
                android:layout_marginBottom="10dp"
                android:id="@+id/editTextTextConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:text="@string/skip"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_secondary"
                    android:text="@string/to_login"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />


                <Button
                    android:id="@+id/button_ok"
                    android:layout_margin="10dp"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:text="@string/ok"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

            </LinearLayout>

        </LinearLayout>


        <!--        <TextView-->
<!--            android:id="@+id/textview_first"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/test_part_4"-->
<!--            app:layout_constraintTop_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBottom_toTopOf="@id/button_first" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>