<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entering.TagFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:id="@+id/registration_label"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/tags_choosing_logo"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="35sp" />

            <TextView
                android:layout_marginBottom="20dp"
                android:id="@+id/terms_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tags_choosing_description"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pie Cake" />

                <com.github.okdroid.checkablechipview.CheckableChipView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pie Cake" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:text="@string/skip"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_secondary"
                    android:text="@string/view_more"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />


                <Button
                    android:id="@+id/button_ok"
                    android:layout_margin="10dp"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/design_default_color_secondary_variant"
                    android:text="@string/ok"
                    android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

            </LinearLayout>

        </LinearLayout>


        <!--        <TextView-->
        <!--            android:id="@+id/textview_first"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:text="@string/test_part_4"-->
        <!--            app:layout_constraintTop_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/button_first" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>